# cimis3.0-python

./: .gitignore  README.md  pyproject.toml
src/cimis/: __init__.py  cache.py  client.py  constants.py  exceptions.py  geo.py  models.py
tests/: test_cache.py  test_cimis.py  test_geo.py
