[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cimis"
version = "0.1.0"
description = "Python client for the CIMIS (California Irrigation Management Information System) REST Web API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Greg Hirson" }]
keywords = ["cimis", "weather", "evapotranspiration", "irrigation", "california"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = ["requests>=2.25"]

[project.optional-dependencies]
pandas = ["pandas>=1.3"]
geo = ["geopandas>=0.13"]
dev = ["pytest>=7", "pandas>=1.3", "geopandas>=0.13"]

[project.urls]
Documentation = "https://www.cimis.water.ca.gov/web-api/rest-api/latest"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
